# Taboo-Gwen3

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: secrets.yaml
configs/training/: base_qlora.yaml
data/samples/: taboo-anchor.jsonl
models/: chat_templates.py  smoke_mode_flip.py
scripts/: bootstrap_env.sh  smoke_mode_flip.py  train_qlora.py  validate_dataset.py
src/taboo_gwen3/: __init__.py
src/taboo_gwen3/config/: secrets.py
src/taboo_gwen3/data/: builders.py  validators.py
src/taboo_gwen3/training/: config.py
tests/: test_secrets.py
training/: config.py  train_qlora.py
